Refactoring to remove deprecated methods